Actualizacion de guardado de imagen y pdf y documentacion de updateProduct
